[tool.poetry]
name = "fitbit2influx"
version = "0.1.0"
description = "Fitbit API client which sends data to an Influx database"
authors = ["J.P. Krauss <jkrauss@asymworks.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
influxdb = "^5.3.1"
requests = "^2.25.1"
python-dotenv = "^0.15.0"
APScheduler = "^3.6.3"
gevent = "^20.12.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
oitnb = "^0.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
